[package]
name = "glass-os"
version = "0.1.0"
authors = ["https://github.com/kaubu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shell-words = "1.0.0"
termcolor = "1.1.2"
phf = { version = "0.8.0", features = ["macros"] }
termion = "1.5.6"
ctrlc = "3.1.9"
